# docmux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: hookify.cargo-toml-watcher.md  hookify.doc-staleness-stop.md  settings.json
.claude/agents/: playground-reviewer.md  rust-reviewer.md
.claude/hooks/: inject-project-state.sh  quality-gate.sh  quality-review.md
.claude/rules/: latex.md  markdown-reader.md  myst.md  rust.md  typescript.md  typst.md
.claude/skills/new-crate/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/docmux-ast/: Cargo.toml
crates/docmux-ast/src/: lib.rs
crates/docmux-cli/: Cargo.toml
crates/docmux-cli/src/: main.rs
crates/docmux-cli/tests/: cli_smoke.rs  golden.rs  multi_file_latex.rs
crates/docmux-core/: Cargo.toml
crates/docmux-core/src/: lib.rs
crates/docmux-highlight/: Cargo.toml
crates/docmux-highlight/src/: lib.rs
crates/docmux-reader-docx/: Cargo.toml
crates/docmux-reader-docx/src/: archive.rs  document.rs  footnotes.rs  lib.rs  metadata.rs  numbering.rs  relationships.rs  styles.rs
crates/docmux-reader-html/: Cargo.toml
crates/docmux-reader-html/src/: lib.rs
crates/docmux-reader-latex/: Cargo.toml
crates/docmux-reader-latex/src/: flatten.rs  lexer.rs  lib.rs  parser.rs  unescape.rs
crates/docmux-reader-markdown/: Cargo.toml
crates/docmux-reader-markdown/src/: lib.rs
crates/docmux-reader-myst/: Cargo.toml
crates/docmux-reader-myst/src/: lib.rs
crates/docmux-reader-typst/: Cargo.toml
crates/docmux-reader-typst/src/: lexer.rs  lib.rs  parser.rs
crates/docmux-template/: Cargo.toml
crates/docmux-template/src/: lib.rs  parser.rs  renderer.rs
crates/docmux-template/templates/: default.html  default.latex  default.myst  default.plaintext
crates/docmux-transform-cite/: Cargo.toml
crates/docmux-transform-cite/src/: lib.rs
crates/docmux-transform-crossref/: Cargo.toml
crates/docmux-transform-crossref/src/: lib.rs
crates/docmux-transform-math/: Cargo.toml
crates/docmux-transform-math/src/: latex_to_mathml.rs  latex_to_typst.rs  lib.rs  tables.rs  tokenizer.rs  typst_to_latex.rs
crates/docmux-transform-number-sections/: Cargo.toml
crates/docmux-transform-number-sections/src/: lib.rs
crates/docmux-transform-section-divs/: Cargo.toml
crates/docmux-transform-section-divs/src/: lib.rs
crates/docmux-transform-toc/: Cargo.toml
crates/docmux-transform-toc/src/: lib.rs
crates/docmux-wasm/: Cargo.toml
crates/docmux-wasm/src/: lib.rs
crates/docmux-writer-docx/: Cargo.toml
crates/docmux-writer-docx/src/: lib.rs  styles.xml
crates/docmux-writer-docx/tests/: integration.rs
crates/docmux-writer-html/: Cargo.toml
crates/docmux-writer-html/src/: lib.rs
crates/docmux-writer-latex/: Cargo.toml
crates/docmux-writer-latex/src/: lib.rs
crates/docmux-writer-markdown/: Cargo.toml
crates/docmux-writer-markdown/src/: lib.rs
crates/docmux-writer-myst/: Cargo.toml
crates/docmux-writer-myst/src/: lib.rs
crates/docmux-writer-plaintext/: Cargo.toml
crates/docmux-writer-plaintext/src/: lib.rs
crates/docmux-writer-typst/: Cargo.toml
crates/docmux-writer-typst/src/: lib.rs
docs/: pandoc-parity-check.md  plan-myst-reader.md
docs/superpowers/plans/: 2026-03-23-latex-reader.md  2026-03-24-typst-reader.md  2026-03-25-playground.md  2026-03-25-typst-writer.md  2026-03-26-html-reader-syntax-highlighting.md  2026-03-27-docx-writer.md  2026-04-02-docx-reader.md  2026-04-03-docx-image-extraction.md  2026-04-03-markdown-cli-extensions.md  2026-04-04-template-engine.md  2026-04-06-npm-wasm-package.md  2026-04-07-cite-transform.md  2026-04-09-release-and-ci.md  2026-04-10-docx-image-pipeline.md  2026-04-10-myst-writer.md  2026-04-10-phase3-remaining.md  2026-05-11-latex-input-include-resolution.md
docs/superpowers/specs/: 2026-03-23-latex-reader-design.md  2026-03-24-npm-wasm-package-design.md  2026-03-24-typst-reader-design.md  2026-03-25-playground-design.md  2026-03-25-typst-writer-design.md  2026-03-26-html-reader-syntax-highlighting-design.md  2026-03-27-docx-writer-design.md  2026-04-02-docx-reader-design.md  2026-04-03-docx-image-extraction-design.md  2026-04-03-markdown-cli-extensions-design.md  2026-04-03-template-engine-design.md  2026-04-06-npm-wasm-package-design.md  2026-04-07-cite-transform-design.md  2026-04-10-docx-image-pipeline-design.md  2026-04-10-myst-writer-design.md  2026-04-10-phase3-remaining-design.md  2026-05-10-latex-input-include-resolution-design.md
docs/tests/plans/: wasm-playground-test-plan.md
npm/: README.md  package.json  test.mjs  tsconfig.json
npm/scripts/: build.sh
npm/src/: index.node.ts  index.ts  raw.ts
npm/web/: docmux_wasm.d.ts  docmux_wasm.js  docmux_wasm_bg.wasm.d.ts
playground/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
playground/src/: App.tsx  index.css
playground/src/components/: Editor.tsx  FileTree.tsx  Header.tsx  OutputTabs.tsx
playground/src/contexts/: workspace-context.tsx
playground/src/hooks/: useConversion.ts  useDocxImport.ts  useDownload.ts  useDropZone.ts  useImageDrop.ts
playground/src/lib/: debounce.ts  file-tree.ts  formats.ts
playground/src/types/: file-system-access.d.ts
playground/src/vfs/: db.ts  import.ts  types.ts
playground/src/wasm/: docmux.ts
scripts/: release.sh
tests/fixtures/basic/: blockquote.html  blockquote.md  blockquote.tex  code-block.html  code-block.md  code-block.tex  frontmatter.html  frontmatter.md  frontmatter.tex  heading.html  heading.md  heading.tex  horizontal-rule.html  horizontal-rule.tex  inline-formatting.html  inline-formatting.md  inline-formatting.tex  latex-code.tex  latex-code.tex.html  latex-figure.tex  latex-figure.tex.html  latex-heading.tex  latex-heading.tex.html  latex-inlines.tex  latex-inlines.tex.html  latex-lists.tex  latex-lists.tex.html  latex-math.tex  latex-math.tex.html  latex-paragraph.tex  latex-paragraph.tex.html  (+37 more)
(+20 files in other folders)
