[workspace]
resolver = "2"
members = [
    "crates/docmux-ast",
    "crates/docmux-core",
    "crates/docmux-reader-html",
    "crates/docmux-reader-docx",
    "crates/docmux-reader-markdown",
    "crates/docmux-reader-myst",
    "crates/docmux-reader-typst",
    "crates/docmux-reader-latex",
    "crates/docmux-writer-html",
    "crates/docmux-writer-latex",
    "crates/docmux-writer-typst",
    "crates/docmux-writer-markdown",
    "crates/docmux-writer-myst",
    "crates/docmux-writer-plaintext",
    "crates/docmux-writer-docx",
    "crates/docmux-transform-math",
    "crates/docmux-transform-cite",
    "crates/docmux-transform-crossref",
    "crates/docmux-transform-toc",
    "crates/docmux-transform-number-sections",
    "crates/docmux-transform-section-divs",
    "crates/docmux-template",
    "crates/docmux-highlight",
    "crates/docmux-cli",
    "crates/docmux-wasm",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/aguschirico/docmux"
description = "Universal document converter — MIT licensed, WASM-first"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
docmux-ast = { path = "crates/docmux-ast" }
docmux-core = { path = "crates/docmux-core" }
docmux-reader-markdown = { path = "crates/docmux-reader-markdown" }
docmux-reader-myst = { path = "crates/docmux-reader-myst" }
docmux-reader-typst = { path = "crates/docmux-reader-typst" }
docmux-reader-html = { path = "crates/docmux-reader-html" }
docmux-reader-docx = { path = "crates/docmux-reader-docx" }
docmux-reader-latex = { path = "crates/docmux-reader-latex" }
docmux-writer-html = { path = "crates/docmux-writer-html" }
docmux-writer-latex = { path = "crates/docmux-writer-latex" }
docmux-writer-typst = { path = "crates/docmux-writer-typst" }
docmux-writer-markdown = { path = "crates/docmux-writer-markdown" }
docmux-writer-myst = { path = "crates/docmux-writer-myst" }
docmux-writer-plaintext = { path = "crates/docmux-writer-plaintext" }
docmux-writer-docx = { path = "crates/docmux-writer-docx" }
docmux-transform-math = { path = "crates/docmux-transform-math" }
docmux-transform-cite = { path = "crates/docmux-transform-cite" }
docmux-transform-crossref = { path = "crates/docmux-transform-crossref" }
docmux-transform-toc = { path = "crates/docmux-transform-toc" }
docmux-transform-number-sections = { path = "crates/docmux-transform-number-sections" }
docmux-transform-section-divs = { path = "crates/docmux-transform-section-divs" }
docmux-template = { path = "crates/docmux-template" }
docmux-highlight = { path = "crates/docmux-highlight" }

# External dependencies
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
comrak = { version = "0.36", default-features = false }
clap = { version = "4", features = ["derive"] }
scraper = "0.22"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
base64 = "0.22"
hayagriva = { version = "0.9", default-features = false, features = ["biblatex"] }
citationberg = "0.6"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
