[package]
name = "docmux-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstract syntax tree types for docmux document conversion"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
