[package]
name = "docmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for docmux — universal document converter"
rust-version.workspace = true

[[bin]]
name = "docmux"
path = "src/main.rs"

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
docmux-reader-latex = { workspace = true }
docmux-reader-markdown = { workspace = true }
docmux-reader-myst = { workspace = true }
docmux-reader-typst = { workspace = true }
docmux-writer-html = { workspace = true }
docmux-writer-markdown = { workspace = true }
docmux-writer-latex = { workspace = true }
docmux-writer-typst = { workspace = true }
docmux-writer-plaintext = { workspace = true }
docmux-writer-docx = { workspace = true }
docmux-reader-html = { workspace = true }
docmux-reader-docx = { workspace = true }
docmux-highlight = { workspace = true }
docmux-transform-toc = { workspace = true }
docmux-transform-number-sections = { workspace = true }
docmux-transform-section-divs = { workspace = true }
docmux-transform-cite = { workspace = true }
docmux-template = { workspace = true }
hayagriva = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
zip = { workspace = true }
