[package]
name = "docmux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and pipeline for docmux document conversion"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-template = { workspace = true }
thiserror = { workspace = true }
