[package]
name = "docmux-highlight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Syntax highlighting for docmux using syntect"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
syntect = { workspace = true }
