[package]
name = "docmux-reader-html"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML reader for docmux — parses HTML into the docmux AST"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
scraper = { workspace = true }
