[package]
name = "docmux-transform-crossref"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-reference resolver for docmux — auto-numbers figures, tables, equations and resolves CrossRef nodes"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
