[package]
name = "docmux-transform-section-divs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Section-divs transform for docmux — wraps heading sections in Div containers"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
