[package]
name = "docmux-transform-toc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Table of contents generator for docmux"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
