[package]
name = "docmux-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for docmux"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
docmux-reader-markdown = { workspace = true }
docmux-writer-html = { workspace = true }
wasm-bindgen = "0.2"
