[package]
name = "docmux-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for docmux"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }

# Readers
docmux-reader-markdown = { workspace = true }
docmux-reader-latex = { workspace = true }
docmux-reader-typst = { workspace = true }
docmux-reader-myst = { workspace = true }
docmux-reader-html = { workspace = true }
docmux-reader-docx = { workspace = true }
docmux-highlight = { workspace = true }

# Writers
docmux-writer-html = { workspace = true }
docmux-writer-latex = { workspace = true }
docmux-writer-typst = { workspace = true }
docmux-writer-markdown = { workspace = true }
docmux-writer-plaintext = { workspace = true }
docmux-writer-docx = { workspace = true }

# Transforms
docmux-transform-crossref = { workspace = true }
docmux-transform-toc = { workspace = true }
docmux-transform-number-sections = { workspace = true }

wasm-bindgen = "0.2"
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
