[package]
name = "docmux-writer-html"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML5 writer for docmux"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
docmux-highlight = { workspace = true }
