[package]
name = "docmux-writer-latex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LaTeX writer for docmux — converts AST to LaTeX output"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
