[package]
name = "docmux-writer-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CommonMark/GFM Markdown writer for docmux"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
docmux-template = { workspace = true }
