[package]
name = "docmux-writer-plaintext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plain text writer for docmux — stripped output"
rust-version.workspace = true

[dependencies]
docmux-ast = { workspace = true }
docmux-core = { workspace = true }
